Fixed hero banner spacing.
git-svn-id: http://vreportetl01t.corp.hds.com/svnrepo/HDS.com-Revamp/hdscorp@872 b06f84e9-1d16-493f-8c0d-41b76f67d7c8

--- a/content/src/main/content/jcr_root/etc/clientlibs/hdscorp/main/css/service-training.css
+++ b/content/src/main/content/jcr_root/etc/clientlibs/hdscorp/main/css/service-training.css
@@ -1,6 +1,6 @@
 .services-training-banner{ background-image: url("../images/service-training-banner.png"); z-index:2}
 .training{text-align:left!important;   padding: 60px 0 84px!important;}
-.service-support-main .serv-training-overview h2, h3{font-family: "museo-slab",Helvetica,Arial,sans-serif;
+.service-support-main .serv-training-overview h2{font-family: "museo-slab",Helvetica,Arial,sans-serif;
     font-size: 1.5rem;
     font-weight: 700;
     padding-bottom: 35px;
